<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include layout="@layout/header"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="7"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_open_friend_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_friend"
                android:layout_marginRight="20dp"/>

            <Button
                android:id="@+id/btn_open_invitation_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_view_invitation"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_weight="9">

            <TextView
                android:id="@+id/list_invitation_empty"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/no_invitation"
                android:textAlignment="center"
                android:layout_margin="@dimen/default_large_margin"/>

            <ListView
                android:id="@+id/listview_invitation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </LinearLayout>



    </LinearLayout>

    <include layout="@layout/footer"/>
</LinearLayout>