<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:windowSoftInputMode="adjustNothing"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/list_user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:paddingLeft="8dp"
        android:windowSoftInputMode="adjustNothing"
        android:textSize="18sp"
        android:textStyle="bold" />


    <ImageButton
        android:id="@+id/btn_cancel_invitation"
        android:src="@drawable/ic_cancel_black_24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:windowSoftInputMode="adjustNothing"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:background="@android:color/transparent"/>

    <Button
        android:id="@+id/btn_add_friend"
        android:layout_width="wrap_content"
        android:windowSoftInputMode="adjustNothing"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="5dp"
        android:text="@string/btn_add_friend" />

    <TextView
        android:id="@+id/list_user_already-friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:paddingLeft="8dp"
        android:windowSoftInputMode="adjustNothing"
        android:layout_marginRight="10dp"
        android:text="@string/already_friend"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/txt_invitation_sended"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:windowSoftInputMode="adjustNothing"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="75dp"
        android:text="@string/inv_send"/>

</RelativeLayout>