<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <LinearLayout
        android:id="@+id/activity_mentor_chat_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            android:layout_weight="2"
            android:background="#1D4A5D"
            android:windowSoftInputMode="adjustNothing">
            <ImageButton
                android:id="@+id/back_setting"
                android:src="@drawable/ic_arrow_back_black_24dp"
                android:background="@color/fui_transparent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:windowSoftInputMode="adjustNothing"
                android:paddingLeft="5dp"
                android:paddingTop="30dp"
                android:paddingBottom="30dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:windowSoftInputMode="adjustNothing"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:textColor="#FFFF"
                    android:textSize="23sp"
                    android:textStyle="italic"
                    android:windowSoftInputMode="adjustNothing"
                    android:text="@string/setting"
                    android:textAlignment="center"
                    android:layout_weight="2"/>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="#0E2D3F"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="4"
            android:layout_margin="@dimen/default_large_margin">

            <ImageView
                android:id="@+id/apa_profile_picture"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_margin="20dp"
                app:srcCompat="@drawable/user_profile"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_height="0dp"
            android:layout_weight="2">
            <Button
                android:id="@+id/btn_change_picture_profile"
                android:layout_width="wrap_content"
                style="@style/BlueButton"
                android:layout_height="wrap_content"
                android:text="Add New Picture"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mod_name"
                android:gravity="center"
                android:textColor="#FFFF"
                android:layout_gravity="center"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/apa_txt_name"
                android:layout_width="match_parent"
                android:textColor="#FFFF"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textStyle="italic"/>
        </LinearLayout>

        <!-- PROFILE EMAIL CONTAINER -->
        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_margin="@dimen/default_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_mail"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="#FFFF"
                android:textSize="18sp"
                android:textStyle="italic"/>

            <!-- PROFILE EMAIL -->
            <TextView
                android:id="@+id/apa_txt_email"
                android:layout_width="match_parent"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:textColor="#FFFF"
                android:textSize="15sp"
                android:textStyle="italic"
                android:paddingLeft="@dimen/default_margin"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:layout_gravity="center">

            <!-- CHECKBOX IS USER MENTOR -->
            <CheckBox
                android:id="@+id/apa_autorise_location"
                android:layout_width="wrap_content"
                android:textColor="#FFFF"
                android:textSize="17dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:text="@string/chk_location"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_weight="3">

            <!-- BUTTON SIGN OUT -->
            <Button
                android:id="@+id/apa_btn_sign_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/BlueButton"
                android:text="@string/btn_sign_out"
                android:textColor="#fff"
                android:textSize="@dimen/default_text_size"/>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>